--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
-    <meta charset="UTF-8">
-    <title>YUN-API</title>
+  <meta charset="UTF-8">
+  <title>YUN-API</title>
 </head>
 
 <body>
-    <div id="react-app"></div>
+  <div id="react-app"></div>
 </body>
 
 </html>
